lintian-brush (0.57) UNRELEASED; urgency=medium

  * Add fixer for debian-changelog-line-too-long.
  * Add fixer for misspelling-in-bug-closes.
  * Add some initial code for cleaning up unused lintian overrides.
  * Drop the no-dh-sequencer fixer.
  * Drop unnecessary --with=systemd if debhelper 10 is in use. Closes:
    #949818
  * Add fixer for unused-override. Closes: #932528

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 12 Jan 2020 16:09:28 +0000

lintian-brush (0.56) unstable; urgency=medium

  [ Jelmer Vernooĳ ]
  * Attempt to keep preferred order of fields in YAML files.
  * Don't write debian/upstream/metadata when just setting name. Closes:
    #948276
  * debian/upstream/metadata: Insert new entries alphabetically. Closes:
    #948155
  * Try harder to avoid rewriting YAML files.

  [ Sven Joachim ]
  * Fix Vcs-{Git,Browser} fields.

  [ Jelmer Vernooĳ ]
  * Add fixer for missing-build-dependency-for-dh_-command.
  * Add fixer for missing-build-dependency-for-dh-addon.
  * s/licence/license/g

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 11 Jan 2020 22:21:59 +0000

lintian-brush (0.55) unstable; urgency=medium

  * Fix verification of Bug-Submit URLs for github.com.
  * Fix handling of non-default encodings in debian/patches.
  * Use dh $@ sequencer.
  * Change the commit message style so the footer is short, human-readable
    and parseable. Closes: #946803

 -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 06 Jan 2020 13:46:10 +0000

lintian-brush (0.54) unstable; urgency=medium

  * Fix accidental removal of dh overrides with just conditions.
  * Disable the skip-systemd-native-flag-missing-pre-depends fixer for now,
    since it is too naive.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 03 Jan 2020 17:43:21 +0000

lintian-brush (0.53) unstable; urgency=medium

  [ Jelmer Vernooĳ ]
  * Be a bit quieter when unable to contact udd.
  * Filter out duplicate lines in the last last changelog entry.
  * Add manpage for guess-upstream-metadata(1).